<resources>
    <string name="app_name">热火新闻</string>

    <!--menu-->
    <string name="news">热火新闻</string>
    <string name="zhihu">知乎</string>
    <string name="photo">图片</string>
    <string name="video">视频</string>
    <string name="tools">设置</string>
    <string name="no_photo_mode">无图模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="about">关于</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- 共享过度动画 -->
    <string name="transition_photos">transition_animation_news_photos</string>

    <!-- 新闻 -->
    <string name="photo_collections">图集：%1$s</string>
    <string name="news_from">%1$s %2$s</string>
    <string name="photo_detail_title">%1$d/%2$d　%3$s</string>
    <string name="web_view">WebView</string>
    <string name="photo_news">图片新闻</string>
    <string name="browser">用浏览器打开</string>
    <string name="share">分享</string>
    <string name="share_contents">来自「热火新闻」的分享：%1$s %2$s</string>

    <!-- 新闻频道 -->
    <string name="channel_explain">点击可增删/长按并拖拽可排序</string>
    <string name="my_channel">我的频道</string>
    <string name="more_channel">更多频道</string>
    <string name="channel_manage">频道管理</string>

    <!-- 图片 -->
    <string name="girl_title">靓妹纸</string>
    <string name="girl">妹纸</string>
    <string name="set_wallpaper">设为壁纸</string>
    <!--视频-->
    <string name="videos">视频</string>
    <string name="video_play_times">%1$s次播放</string>

    <!--动态 -->
    <string name="circle_zone">热火动态</string>
    <string name="zone_img_position">circle_img_position</string>
    <string name="circle_zone_not_read_news">%1$s条新消息</string>
    <string name="expand">全文</string>
    <string name="shink">收起</string>
    <string name="nick_name">世锋日上</string>
    <string name="save">提交</string>
    <string name="circle_publish_empty">发表内容不能为空！</string>
    <string name="zone_publish_title">发表说说</string>
    <string name="zone_toggle_theme_title">切换主题</string>
    <string name="friend_zone_title">好友动态</string>
    <string name="friend_zone_toggle">日夜模式切换</string>
    <string name="friend_zone_about">关于</string>
    <string name="care_main_title">我关注的</string>
    <string name="care_about_wechat">更多精彩文章请关注微信公众号"Android经验分享"：这里将长期为您分享Android高手经验、中外开源项目、源码解析、框架设计和Android好文推荐！
    </string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="email_hint">手机号</string>
    <string name="password_hint">密码</string>
    <string name="signin">登录</string>
    <string name="signup_link"><u>没有账户么？ 请注册</u></string>
    <!-- 忘记密码暂时不提供这个功能 -->
    <string name="forgot_password">""</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">确认密码</string>
    <string name="verify_code">验证码</string>
    <string name="verify_code_get">获取验证码</string>
    <string name="sign_up">注册</string>
    <string name="signin_link"><u>已经有帐号了么? 请登录</u></string>
    <string name="reset_password">重置密码</string>
    <string name="remember_password">已知密码？ 登录</string>

    <string name="no_tips_msg_phone">请输入手机号或密码</string>
    <string name="confirm_pw_inconformity">确认密码与原密码输入不一致</string>
    <string name="login_success">登录成功</string>

</resources>
