<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_email"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#3a3a3a">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="#3a3a3a"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrapper_email"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"
            android:textColorHint="#3a3a3a">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="#3a3a3a"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/wrapper_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/wrapper_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:textColorHint="#3a3a3a">

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="#3a3a3a"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/wrapper_verify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/wrapper_confirm_password"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:textColorHint="#3a3a3a">

            <EditText
                    android:id="@+id/verify_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/verify_code"
                    android:textColor="#3a3a3a"
                    android:textSize="15sp" />

            <Button
                    android:id="@+id/verify_code_get"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/verify_code_get"
                    android:textColor="#3a3a3a"
                    android:textSize="15sp"
                    android:layout_gravity="right"
            />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_below="@+id/wrapper_verify"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/button"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/submit"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/signin_link"
                android:textColor="@color/main_blue"
                android:textAllCaps="true"
                android:autoLink="all"
                android:textSize="15sp" />

    </RelativeLayout>

</ScrollView>
